--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -6,7 +6,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
+      - name: permission
+        run: chmod +x cucumber-json-formatter 
+      - name: dependencies
+        run: npm install
       - name: Cypress run
         uses: cypress-io/github-action@v6
