--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -7,7 +7,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: permission
-        run: chmod +x cucumber-json-formatter 
+        run: |
+          mkdir cypress/config/cucumber_json
+          echo "${{ github.workspace }}/cypress/config/cucumber_json" >> $GITHUB_PATH
+          cd cypress/config/cucumber_json
+          curl https://github.com/cucumber/json-formatter/releases/download/v19.0.0/cucumber-json-formatter-linux-amd64 -o cucumber-json-formatter
+          chmod +x cucumber-json-formatter
+      - name: Test formatter
+        run: cucumber-json-formatter --help 
       - name: dependencies
         run: npm install
       - name: Cypress run
