--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v4
       - name: permission
         run: |
-          mkdir cypress/config/cucumber_json
+          mkdir -p cypress/config/cucumber_json
           echo "${{ github.workspace }}/cypress/config/cucumber_json" >> $GITHUB_PATH
           cd cypress/config/cucumber_json
           curl https://github.com/cucumber/json-formatter/releases/download/v19.0.0/cucumber-json-formatter-linux-amd64 -o cucumber-json-formatter
